--- a/rankList.html
+++ b/rankList.html
@@ -1,1 +1,78 @@
-eval(function(p,a,c,k,e,r){e=function(c){return(c<62?'':e(parseInt(c/62)))+((c=c%62)>35?String.fromCharCode(c+29):c.toString(36))};if('0'.replace(0,e)==0){while(c--)r[e(c)]=k[c];k=[function(e){return r[e]||e}];e=function(){return'[2-79a-uwyzA-L]'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('<!DOCTYPE k><k><t><u charset="utf-8"><u name="viewport"content="initial-w=1.0, maximum-w=1.0, user-scalable=no"/><y>THE GREAT WALL</y><l m="z"n="e/e.e"/><l m="z"n="e/responsive.e"/><l m="A"9="image/x-A"n=\'img/favicon.ico\'/><3 9="a/b"c="4/jquery.4"></3><3 9="a/b"c="B/B.4"></3><3 9="a/b"c="4/vue.4"></3><3 9="a/b"c="4/global.4"></3><3 9="a/b"c="4/data.4"></3><3 9="a/b"c="4/web3.C.4"></3><3 9="a/b"c="4/clipboard.C.4.4"></3></t><D><2 h="app"v-cloak><2 5="statisticsTop"><2 5="E"><2 5="nav_btn"@o="getNavs"><6></6><6></6><6></6></2><2 5="nav"><d><7 v-p="(i,f) q F"@o="G(f)">{{i}}</7></d></2><2 5="nav_mobile"v-show="showNav"><2 5="bg"><d><7 v-p="(i,f) q F"@o="G(f)">{{i}}</7></d></2></2></2></2><2 5="block_box block_common H"><2 5="E"><I 5="common_sub_title mb20 common_title no_bg">{{j.J.yesterdayRankList}}</I><2 5="block_list"><2 5="block_item income"><d 5="g-list"><7><6 5="g-h">{{j.K.h}}</6><6 5="g-r">{{j.K.ac_award}}</6></7><7 v-p="(s,f) q L"><6 5="g-h">{{s.user_id}}</6><6 5="g-r">{{s.r}}ETH</6></7><7 v-if="L.length == 0">{{j.J.noData}}</7></d></2></2></2></2></2><3 9="a/b "c="4/H.4"></3></D></k>',[],48,'||div|script|js|class|span|li||type|text|javascript|src|ul|css|index|friends|id|value|langItem|html|link|rel|href|click|for|in|money|item|head|meta||scale||title|stylesheet|icon|lang|min|body|container|langList|changeLang|rank|h3|com|ranking|rankYesterdayList'.split('|'),0,{}))
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<title>THE GREAT WALL</title>
+		<link rel="stylesheet" href="css/css.css" />
+		<link rel="stylesheet" href="css/responsive.css" />
+		<link rel="icon" type="image/x-icon" href='img/favicon.ico' />
+		<script type="text/javascript" src="js/jquery.js"></script>
+		<script type="text/javascript" src="lang/lang.js"></script>
+		<script type="text/javascript" src="js/vue.js"></script>
+		<script type="text/javascript" src="js/global.js"></script>
+		<script type="text/javascript" src="js/data.js"></script>
+		<script type="text/javascript" src="js/web3.min.js"></script>
+		<script type="text/javascript" src="js/clipboard.min.js.js"></script>
+	</head>
+
+	<body>
+		<div id="app" v-cloak>
+			<div class="statisticsTop">
+				<div class="container">
+					<div class="nav_btn" @click="getNavs">
+						<span></span>
+						<span></span>
+						<span></span>
+					</div>
+					<div class="nav">
+						<ul>
+							<li v-for="(value,index) in langList" @click="changeLang(index)">{{value}}</li>
+						</ul>
+					</div>
+
+					<div class="nav_mobile" v-show="showNav">
+						<div class="bg">
+							<ul>
+								<li v-for="(value,index) in langList" @click="changeLang(index)">{{value}}</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="block_box block_common rank">
+				<div class="container">
+					<h3 class="common_sub_title mb20 common_title no_bg">
+						{{langItem.com.yesterdayRankList}}
+					</h3>
+
+					<div class="block_list">
+						<div class="block_item income">  
+							<ul class="friends-list">
+								<li>
+									<span class="friends-id">{{langItem.ranking.id}}</span>
+									<span class="friends-money">{{langItem.ranking.ac_award}}</span>
+								</li>
+								<li v-for="(item,index) in rankYesterdayList">
+									<span class="friends-id">{{item.user_id}}</span>
+									<span class="friends-money">{{item.money}} ETH</span>
+								</li>
+								<li v-if="rankYesterdayList.length == 0">
+									{{langItem.com.noData}}
+								</li>
+							</ul>
+						</div>
+						
+					</div>
+				</div>
+
+			</div>
+
+			
+		</div>
+		<script type="text/javascript " src="js/rank.js"></script>
+
+	</body>
+
+</html>
